--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </article>
   </main>
   <footer>
-    <p>&copy; 2024 Your Name</p>
+    <p>This work is in the public domain.</p>
   </footer>
 </body>
 </html>
