--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div id="calibre_link-42" lang="en-US" lang="en-US" class="calibre">
 		<div class="basic-text-frame">
-			<h1 class="pn" id="calibre_link-89"><a id="calibre_link-27"></a>Maiden Reincarnation 2024</h1>
+			<h1 class="pn" id="calibre_link-89"><a id="calibre_link-27"></a>Maiden Reincarnation 2024 - The Solution</h1>
 		</div>
 </div>
 
@@ -18,6 +18,7 @@
 			<p class="preface">Dlanor presents. A Maiden Reincarnation mystery.</p>
 			<p class="preface">This story is in the public domain.</p>
 			<p class="preface">Edited by Dlanor, 3/31/2024.</p>
+			<p class="preface">Chapters 5 to 6 added, 4/02/2024.</p>
 		</div>
 </div>
 
@@ -173,10 +174,45 @@
 			<p class="p">“Open the closet, Garrick. One of your victims is inside.”</p>
 		</div>
 	</div>
-	
+
+<div id="calibre_link-38" lang="en-US" lang="en-US" class="calibre">
+		<div class="basic-text-frame">
+			<h1 class="cn" id="calibre_link-94"><a id="calibre_link-32"></a>V</h1>
+			<p class="pf">Garrick stood looking stupidly before him, his hand moving in a tiny futile gesture. The others were perfectly motionless.</p>
+			<p class="p">“We got his body out of the moat this morning,” Bencolin said with dull flat monotony, “where you threw it. Open the door!”</p>
+			<p class="p">A tiny space separated Garrick from collapse. He looked down at his feet. There was a trickle of water crawling from under the door.</p>
+			<p class="p">“I&mdash;can’t,” muttered Billy Garrick.</p>
+			<p class="p">“Listen! You killed Fragneau.”</p>
+			<p class="p">“Yes. I killed Fragneau.” The reply was mechanical. Sir John suddenly sat down, with his head between his hands.</p>
+			<p class="p">“Shall I tell them how it happened?”</p>
+			<p class="p">“No!”</p>
+			<p class="p">“But I will, Garrick. You and Merton were in debt to Julian Arbor. You arranged this impersonation, you and Merton, so that by following your own example, Lord Brandon and others would wager five thousand pounds. Really, some sort of plot was obvious when I knew that no such book as ‘Contes du Diable’ exists! Julian Arbor did not know, which was why he protested against a wager in which either of you two must lose. You are exactly the same height as Merton&mdash;Sir John said so&mdash;and of his build. When he went to his room he put into effect the genius at impersonation that Sir John has mentioned. He shaved off his beard, he wore a wig which he had prepared in that table drawer, and cosmetic touches under the lights completed the effect. It was his genius! Remember: candlelight! Nobody could detect it. There might have been a slip only in the <span class="i">voice</span>, but you had a cold, the same cold you have now, and hence it was easy. After the door had been bolted on the outside and Merton had completed his preparations, he went to the stairs and waited, flat against the wall by the lower door. On his way down he fired a blank cartridge, which was the one thing that would send the watchers flying pell-mell through the door. It was dark; Brandon had no candle, and could see nothing before or behind him except the lighted door at the top of the stairs. Those who came through the door felt only jostling bodies&mdash;Merton mingled with them and went upstairs again <span class="i">as you</span>. You had already slipped down into the house and out of it; remember that Sir John did not see you from the time he left the tower room until after he had entered it again in search of Merton, and that he heard footsteps in the house. Nobody was watching any door except the one behind which Merton had locked himself. Nobody saw you go out. For the space of the next three hours <span class="i">Merton was yourself</span>.</p>
+			<p class="p">“But you had a deeper motive when you connived with Merton for this impersonation. Ostensibly it was a mere matter of winning the money bet by Lord Brandon and dividing it; that was how you obtained Merton’s assistance. Your real motive was murder. Your real motive was in establishing an alibi for your presence at Bell House while you motored to Fragneau’s home. Diabolical cleverness of it! You could not conceivably be accused of the crime when all unknowingly Merton had proved you to be at Bell House while Fragneau was being killed. And you meant Merton to be accused of the deed instead!” He turned to Sir John. “Think, my friend! Who would be the only person in the world who would have a key to that Fragneau house? Why, the man Fragneau trusted, the man who was his heir! Did that never strike you as logical? Fulke did not know, because Fulke was a new servant, and I nearly overlooked the possibility because you, Sir John, had sworn Garrick was at Bell House the entire evening. Garrick needed money; therefore Fragneau, he reasoned, must die. The winning of a fortune, and Merton punished for the act. But because Merton had established his alibi, Merton too must die, or otherwise the plan would be revealed.</p>
+			<p class="p">“What does he do? He lets himself into Fragneau’s house, kills him, and returns. Meanwhile Merton, masquerading as Garrick, has been forced to go home with Sir John. He retires immediately, lets himself out of the window, and goes back to Bell House, where he has arranged to meet Garrick that they may change identities again before daylight destroys the complete reality of the make-up. At the edge of the moat Garrick meets him. Ah, don’t you see it? The struggle by the water, where Merton, almost wresting the knife from Garrick before the latter stabs him, wounds Garrick in the arm. Then Merton’s death, the sack filled with stones into which the body is stuffed, the disappearance into the water. It is done! For though police authorities might search Bell House for a living Merton, they would never search the moat for a dead one.</p>
+			<p class="p">“Garrick, wounded, returns from Bell House to Sir John’s residence. As he crosses the lawn Sir John sees him, but imagines very naturally that it is Merton, whom he has no grounds to suspect dead. Yellow hair in the moonlight makes an excellent ‘white head’; try the effect of it for yourself. Garrick hears Sir John’s warning cry; he knows that he is trapped unless…</p>
+			<p class="p">“Then,” cried the Frenchman, “what occurs to this master sorcerer? Why, Sir John has fancied that Merton is attacking him; why not pretend that such was the case, else otherwise Garrick could never explain the wound in his arm? It dovetailed perfectly! Garrick strips off his clothing, dons pajamas, and tears the bandage from his arm, allowing the blood to flow. Something like four minutes elapsed before Sir John came to the room. Garrick scuffles with himself in the dark, invents an ingenious story which is the only thing that will save him from discovery. Out of near catastrophe he has produced another attack that will be ascribed to Merton!”</p>
+		</div>
+	</div>
+
+<div id="calibre_link-50" lang="en-US" lang="en-US" class="calibre">
+		<div class="basic-text-frame">
+			<h1 class="cn" id="calibre_link-95"><a id="calibre_link-33"></a>VI</h1>
+			<p class="pf">The tensity had gone out of them all, and there remained only the ruin of tragedy. False emotional stimulant left a sickish after-feeling. Arbor and Sir John had moved away from Garrick. All the elaborate mummery that had been gone into seemed cheap and tawdry as a music hall illusion. Here was simply a felon.</p>
+			<p class="p">Bencolin made a little gesture of weariness.</p>
+			<p class="p">“Eh, bien!” he murmured. “You do not find it pleasant, you do not find it even clever. It upsets every beautiful tradition of a story; not only have we shattered our hero, but there is not enough of the theatrical in him to follow a story formula and kill himself. Because reality is infinitely more childish than the stories about it. Messieurs, you have lived an allegory. What do you make of it? And how do you explain the chance that made Mr. Arbor, irritated by this blind wager of those who could not afford it, leave Bell House and go to Fragneau’s to demand recompense for his nephew’s debts?”</p>
+			<p class="p">Rather absently Sir John put on his hat.</p>
+			<p class="p">“Well…” he said without looking at Garrick. Lord Brandon opened the door. He had not spoken. There was nothing in his face but contempt.</p>
+			<p class="p">Julian Arbor muttered, “You gutter rat!” somewhat incredulously. A constable had come into the darkling room and was going toward Garrick. The latter’s nerves were entirely gone; he had slid down to the floor, and Bencolin thought he heard him moan just once. The Frenchman was speaking softly:</p>
+			<p class="p">“We should none of us fancy that we are devils. Merton did, because he could take any form at will, like Satan, who appeared at the witches’ sabbath in the form of a goat (that was why he kept calling your attention to the goat)… Somewhere we people of the old school thought that there was faith, and honor, and loyalty. We do not believe it now, Sir John. We have seen the other side of youth… It is our last illusion, as the impersonation was Merton’s… We do not think it now, Sir John…”</p>
+			<p class="p">It was almost dark in the room now. The others were all at the door, except Madeline Landervorne. She had come up steadily, and she was bending over the man on the floor, and as she knelt, her eyes glittered with tears.</p>
+			<p class="p">“Billy,” she said, “I don’t believe them. I don’t believe them!”</p>
+		</div>
+	</div>
+
 <div class="calibre">
 		<div class="basic-text-frame">
-			<h1 class="cn">How was the crime committed?</h1>
+			<h1 class="cn">Credits</h1>
+			<p class="preface">“The Shadow of the Goat” by John Dickson Carr, published 1926.</p>
 		</div>
 </div>
 
